src/objects/Marketing_Calendar__c.object
<CustomObject>
    <fields>
        <fullName>Campaign_End_Date__c</fullName>
        <label>Campaign End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Start_Date__c</fullName>
        <label>Campaign Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Direct_Marketing_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Direct Marketing Center</label>
        <referenceTo>Direct_Marketing_Center__c</referenceTo>
        <relationshipLabel>Marketing Calendars</relationshipLabel>
        <relationshipName>Marketing_Calendars</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <globalPicklist>Market</globalPicklist>
        <label>Market</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Calendar_Type__c</fullName>
        <label>Marketing Calendar Type</label>
        <picklist>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Core</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>POD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POD</label>
        <referenceTo>POD__c</referenceTo>
        <relationshipLabel>Marketing Calendars</relationshipLabel>
        <relationshipName>Marketing_Calendars</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Marketing Calendar</label>
    <nameField>
        <displayFormat>MC-{000000}</displayFormat>
        <label>Marketing Calendar Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Calendars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>